# ragpipe

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: README.md  backpressure_demo.rs  error_recovery.rs  full_rag_pipeline.rs  ndjson.rs  ndjson_source.rs  runtime_config.rs
mocks/: data.ndjson
src/: lib.rs
src/chunk/: tokens.rs
src/error/: mod.rs
src/ndjson/: decoder.rs  mod.rs
src/pipeline/: adapters.rs  adapters_try.rs  cancel.rs  chain.rs  config.rs  mod.rs  pipe.rs  retry.rs  runtime.rs
src/source/: fs.rs  mod.rs  ndjson.rs
src/store/: debug.rs
tests/: adapter_chains.rs  adapters.rs  backpressure.rs  cancel.rs  cancel_backoff.rs  cancel_recv.rs  cancel_send.rs  chunker_edge_cases.rs  common.rs  feature_gating.rs  fs_source_errors.rs  graceful_shutdown.rs  mod.rs  ndjson.rs  ndjson_source.rs  others.rs  pipeline.rs  proptest_chunker.rs  retry.rs  retry_ref.rs  retry_time.rs  spawn_sink.rs  stage_config.rs  vec_source.rs
