[package]
name = "ragpipe"
version = "0.1.0"
edition = "2021"
description = "Streaming-first RAG pipelines in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mfcastellani/ragpipe"
readme = "README.md"
rust-version = "1.75"
keywords = ["rag", "llm", "streaming", "ai", "pipeline"]
categories = ["asynchronous", "data-processing"]

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
bytes = "1"
thiserror = "1"
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
ndjson = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
proptest = "1"

[[example]]
name = "ndjson"
required-features = ["ndjson"]

[[example]]
name = "ndjson_source"
required-features = ["ndjson"]

[[example]]
name = "runtime_config"
